--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "^6.19.0",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.3",
     "next": "16.0.7",
+    "next-auth": "^4.24.13",
     "openai": "^6.9.1",
     "prisma": "^6.19.0",
     "react": "19.2.0",
