--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "^6.19.0",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.3",
+    "lucide-react": "^0.454.0",
     "next": "16.0.7",
     "next-auth": "^4.24.13",
     "openai": "^6.9.1",
