--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "^6.19.0",
     "@types/bcryptjs": "^2.4.6",
+    "@uploadthing/react": "^7.3.3",
     "bcryptjs": "^3.0.3",
     "lucide-react": "^0.454.0",
     "next": "16.0.7",
@@ -26,7 +27,8 @@
     "openai": "^6.9.1",
     "prisma": "^6.19.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "uploadthing": "^7.7.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
