--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prisma": "^6.19.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "server-only": "^0.0.1",
     "uploadthing": "^7.7.4"
   },
   "devDependencies": {
