--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Type check
         run: npm run typecheck
       
+      - name: Run tests
+        run: npm run test
+      
       - name: Build
         run: npm run build
         env:
