--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "db:reset": "prisma migrate reset --force --skip-seed"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.11.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.19.0",
     "@types/bcryptjs": "^2.4.6",
     "@uploadthing/react": "^7.3.3",
